delibiration doc
